--- a/Clash-mini.ini
+++ b/Clash-mini.ini
@@ -15,10 +15,10 @@ custom_proxy_group=➡️ 国内`select`[]DIRECT`[]所有-自动`[]俄罗斯-自
 
 ;3、节点组
 custom_proxy_group=所有-自动`url-test`.*`http://www.gstatic.com/generate_204`60,150
-custom_proxy_group=俄罗斯-自动`url-test`(俄罗斯)`http://www.gstatic.com/generate_204`60,150
-custom_proxy_group=日本-自动`url-test`(广日|日本|JP|川日|东京|大阪|泉日|埼玉|沪日|深日|🇯🇵|Japan)`http://www.gstatic.com/generate_204`60,150
-custom_proxy_group=美国-自动`url-test`(广美|美|US|纽约|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|🇺🇸|United States)`http://www.gstatic.com/generate_204`60,150
-custom_proxy_group=其他-自动`url-test`(柬埔|斯坦|尼泊|也纳|克兰|比利时|尔兰|立陶宛|冰岛|秘鲁|耳其|利亚|埃及|希腊|斯洛伐克|孟加|芬兰|阿联|英国|德国|南非|意大|法国|加拿|墨西|印度|越南|罗斯|瑞士|瑞典|智利|荷兰|比亚|巴西|沙特|班牙|泰国)`http://www.gstatic.com/generate_204`60,150
+custom_proxy_group=俄罗斯-自动`url-test`(俄罗斯|RU)`http://www.gstatic.com/generate_204`60,150
+custom_proxy_group=日本-自动`url-test`(日本|JP|🇯🇵|Japan)`http://www.gstatic.com/generate_204`60,150
+custom_proxy_group=美国-自动`url-test`(美|US|🇺🇸|United States)`http://www.gstatic.com/generate_204`60,150
+custom_proxy_group=其他-自动`url-test`(智利|荷兰|泰国)`http://www.gstatic.com/generate_204`60,150
 
 ;4、启用规则集
 enable_rule_generator=true
